objects/OpportunityAuditHistory__c.object
<CustomObject>
    <description>&lt;OAH&gt; Represents data changes for audit purposes ie. Capture changes to stage for an opportunity</description>
    <fields>
        <fullName>ChangedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Audit_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateEffective__c</fullName>
        <label>Date Effective</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ModifiedFieldLabel__c</fullName>
        <label>Modified Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedFieldName__c</fullName>
        <label>Modified Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityApprovalStatus__c</fullName>
        <label>Opportunity Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OpportunityApprovalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Audit Histories</relationshipLabel>
        <relationshipName>OpportunityAuditHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PreviousValue__c</fullName>
        <label>Previous Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opportunity Audit History</label>
    <nameField>
        <displayFormat>OAH-{00000000}</displayFormat>
        <label>Opportunity Audit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Audit Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>